Rename all libjsonnet files to libsonnet

--- a/inventory/classes/kapitan/kube.yml
+++ b/inventory/classes/kapitan/kube.yml
@@ -3,4 +3,4 @@ parameters:
     dependencies:
       - type: https
         source: https://raw.githubusercontent.com/bitnami-labs/kube-libsonnet/master/kube.libsonnet
-        output_path: lib/kube.libjsonnet
+        output_path: lib/kube.libsonnet
