--- a/inventory/classes/kapitan/spinnaker.yml
+++ b/inventory/classes/kapitan/spinnaker.yml
@@ -4,7 +4,7 @@ parameters:
     dependencies:
       - type: https
         source: https://raw.githubusercontent.com/spinnaker/sponnet/master/pipeline.libsonnet
-        output_path: lib/spinnaker-pipeline.libjsonnet
+        output_path: lib/spinnaker-pipeline.libsonnet
       - type: https
         source: https://raw.githubusercontent.com/spinnaker/sponnet/master/application.libsonnet
-        output_path: lib/spinnaker-application.libjsonnet
+        output_path: lib/spinnaker-application.libsonnet
