Add ingress generator

--- a/inventory/classes/kapitan/common.yml
+++ b/inventory/classes/kapitan/common.yml
@@ -2,6 +2,7 @@ classes:
   - kapitan.kube
   - kapitan.spinnaker
   - kapitan.generators.manifests
+  - kapitan.generators.ingresses
 
 parameters:
   scripts: []
