--- a/inventory/classes/components/echo-server.yml
+++ b/inventory/classes/components/echo-server.yml
@@ -36,3 +36,11 @@ parameters:
                 example: true
             simple_config:
               value: "not mounted"
+
+  ingresses:
+    global:
+      paths:
+        - backend:
+            serviceName: echo-server
+            servicePort: 80
+          path: /echo/*
