added document generator

--- a/inventory/classes/kapitan/generators/manifests.yml
+++ b/inventory/classes/kapitan/generators/manifests.yml
@@ -13,3 +13,8 @@ parameters:
         output_type: yaml
         input_paths:
           - components/generators/manifests/main.jsonnet
+      - output_path: docs
+        input_type: jsonnet
+        output_type: plain
+        input_paths:
+          - components/generators/manifests/docs.jsonnet
