--- a/inventory/classes/kapitan/common.yml
+++ b/inventory/classes/kapitan/common.yml
@@ -6,7 +6,8 @@ classes:
 
 parameters:
   scripts: []
-  docs: []
+  docs:
+    - templates/docs/README.md 
   manifests: []
   kapitan:
     compile:
