--- a/compiled/sock-shop/manifests/user-bundle.yml
+++ b/compiled/sock-shop/manifests/user-bundle.yml
@@ -14,8 +14,8 @@ spec:
       app: user
   strategy:
     rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 1
+      maxSurge: 25%
+      maxUnavailable: 25%
     type: RollingUpdate
   template:
     metadata:
