--- a/compiled/gke-pvm-killer/manifests/gke-pvm-killer-bundle.yml
+++ b/compiled/gke-pvm-killer/manifests/gke-pvm-killer-bundle.yml
@@ -14,8 +14,8 @@ spec:
       app: gke-pvm-killer
   strategy:
     rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 1
+      maxSurge: 25%
+      maxUnavailable: 25%
     type: RollingUpdate
   template:
     metadata:
