Add correct security context to socks shop

--- a/compiled/sock-shop/manifests/carts-db-bundle.yml
+++ b/compiled/sock-shop/manifests/carts-db-bundle.yml
@@ -33,6 +33,15 @@ spec:
             - containerPort: 27017
               name: mongo
               protocol: TCP
+          securityContext:
+            capabilities:
+              add:
+                - CHOWN
+                - SETGID
+                - SETUID
+              drop:
+                - all
+            readOnlyRootFilesystem: true
           volumeMounts:
             - mountPath: /tmp
               name: tmp-volume
