--- a/compiled/sock-shop/manifests/catalogue-bundle.yml
+++ b/compiled/sock-shop/manifests/catalogue-bundle.yml
@@ -55,6 +55,15 @@ spec:
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 3
+          securityContext:
+            capabilities:
+              add:
+                - NET_BIND_SERVICE
+              drop:
+                - all
+            readOnlyRootFilesystem: true
+            runAsNonRoot: true
+            runAsUser: 10001
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
 ---
