--- a/compiled/sock-shop/manifests/frontend-bundle.yml
+++ b/compiled/sock-shop/manifests/frontend-bundle.yml
@@ -34,7 +34,7 @@ spec:
           livenessProbe:
             failureThreshold: 3
             httpGet:
-              path: /health
+              path: /
               port: http
               scheme: HTTP
             periodSeconds: 10
@@ -48,12 +48,19 @@ spec:
           readinessProbe:
             failureThreshold: 3
             httpGet:
-              path: /health
+              path: /
               port: http
               scheme: HTTP
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 3
+          securityContext:
+            capabilities:
+              drop:
+                - all
+            readOnlyRootFilesystem: true
+            runAsNonRoot: true
+            runAsUser: 10001
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
 ---
