--- a/compiled/sock-shop/manifests/orders-db-bundle.yml
+++ b/compiled/sock-shop/manifests/orders-db-bundle.yml
@@ -33,6 +33,15 @@ spec:
             - containerPort: 27017
               name: mongo
               protocol: TCP
+          securityContext:
+            capabilities:
+              add:
+                - NET_BIND_SERVICE
+              drop:
+                - all
+            readOnlyRootFilesystem: true
+            runAsNonRoot: true
+            runAsUser: 10001
           volumeMounts:
             - mountPath: /tmp
               name: tmp-volume
