--- a/compiled/sock-shop/manifests/rabbit-mq-bundle.yml
+++ b/compiled/sock-shop/manifests/rabbit-mq-bundle.yml
@@ -36,6 +36,16 @@ spec:
             - containerPort: 5672
               name: rabbitmq
               protocol: TCP
+          securityContext:
+            capabilities:
+              add:
+                - CHOWN
+                - SETGID
+                - SETUID
+                - DAC_OVERRIDE
+              drop:
+                - all
+            readOnlyRootFilesystem: true
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
 ---
