--- a/compiled/sock-shop/manifests/shipping-bundle.yml
+++ b/compiled/sock-shop/manifests/shipping-bundle.yml
@@ -54,6 +54,14 @@ spec:
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 3
+          securityContext:
+            capabilities:
+              add:
+                - NET_BIND_SERVICE
+              drop:
+                - all
+            runAsNonRoot: true
+            runAsUser: 10001
           volumeMounts:
             - mountPath: /tmp
               name: tmp-volume
