--- a/compiled/sock-shop/manifests/user-bundle.yml
+++ b/compiled/sock-shop/manifests/user-bundle.yml
@@ -24,11 +24,8 @@ spec:
     spec:
       containers:
         - env:
-            - name: JAVA_OPTS
-              value: -Xms64m -Xmx128m -XX:PermSize=32m -XX:MaxPermSize=64m -XX:+UseG1GC
-                -Djava.security.egd=file:/dev/urandom
-            - name: ZIPKIN
-              value: zipkin.jaeger.svc.cluster.local
+            - name: mongo
+              value: user-db:27017
           image: weaveworksdemos/user:0.4.7
           imagePullPolicy: IfNotPresent
           livenessProbe:
@@ -54,6 +51,14 @@ spec:
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 3
+          securityContext:
+            capabilities:
+              add:
+                - NET_BIND_SERVICE
+              drop:
+                - all
+            runAsNonRoot: true
+            runAsUser: 10001
           volumeMounts:
             - mountPath: /tmp
               name: tmp-volume
