--- a/compiled/sock-shop/manifests/user-db-bundle.yml
+++ b/compiled/sock-shop/manifests/user-db-bundle.yml
@@ -30,6 +30,13 @@ spec:
             - containerPort: 27017
               name: mongo
               protocol: TCP
+          securityContext:
+            capabilities:
+              add:
+                - CHOWN
+                - SETGID
+                - SETUID
+              drop: all
           volumeMounts:
             - mountPath: /tmp
               name: tmp-volume
