--- a/inventory/classes/applications/sock-shop.yml
+++ b/inventory/classes/applications/sock-shop.yml
@@ -21,3 +21,5 @@ parameters:
         replicas: 1
         labels:
           "app.kubernetes.io/part-of": "sock-shop"
+        security_context:
+          readOnlyRootFilesystem: true
