--- a/inventory/classes/components/weaveworks/orders-db.yml
+++ b/inventory/classes/components/weaveworks/orders-db.yml
@@ -8,6 +8,14 @@ parameters:
       ports:
         mongo:
           service_port: 27017
+      security_context:
+        runAsNonRoot: true
+        runAsUser: 10001
+        capabilities:
+          drop:
+            - all
+          add:
+            - NET_BIND_SERVICE
       volume_mounts:
         tmp-volume:
           mountPath: /tmp
