--- a/inventory/classes/components/weaveworks/orders.yml
+++ b/inventory/classes/components/weaveworks/orders.yml
@@ -14,6 +14,14 @@ parameters:
         probes: ['readiness', 'liveness']
         path: /health
         timeout_seconds: 3
+      security_context:
+        runAsNonRoot: true
+        runAsUser: 10001
+        capabilities:
+          drop:
+            - all
+          add:
+            - NET_BIND_SERVICE
       env:
         ZIPKIN: zipkin.jaeger.svc.cluster.local
         JAVA_OPTS: "-Xms64m -Xmx128m -XX:PermSize=32m -XX:MaxPermSize=64m -XX:+UseG1GC -Djava.security.egd=file:/dev/urandom"
