--- a/inventory/classes/components/weaveworks/payment.yml
+++ b/inventory/classes/components/weaveworks/payment.yml
@@ -8,6 +8,14 @@ parameters:
       ports:
         http:
           service_port: 80
+      security_context:
+        runAsNonRoot: true
+        runAsUser: 10001
+        capabilities:
+          drop:
+            - all
+          add:
+            - NET_BIND_SERVICE
       healthcheck:
         type: http
         port: http
