--- a/inventory/classes/components/weaveworks/session-db.yml
+++ b/inventory/classes/components/weaveworks/session-db.yml
@@ -7,3 +7,11 @@ parameters:
       ports:
         redis:
           service_port: 6379
+      security_context:
+        capabilities:
+          drop:
+            - all
+          add:
+            - CHOWN
+            - SETGID
+            - SETUID
