--- a/inventory/classes/components/weaveworks/user.yml
+++ b/inventory/classes/components/weaveworks/user.yml
@@ -9,15 +9,20 @@ parameters:
           service_port: 80
       env:
         mongo: "user-db:27017"
+      security_context:
+        capabilities:
+          drop:
+            - all
+          add:
+            - NET_BIND_SERVICE
+        runAsNonRoot: true
+        runAsUser: 10001
       healthcheck:
         type: http
         port: http
         probes: ['readiness', 'liveness']
         path: /health
         timeout_seconds: 3
-      env:
-        ZIPKIN: zipkin.jaeger.svc.cluster.local
-        JAVA_OPTS: "-Xms64m -Xmx128m -XX:PermSize=32m -XX:MaxPermSize=64m -XX:+UseG1GC -Djava.security.egd=file:/dev/urandom"
       volume_mounts:
         tmp-volume:
           mountPath: /tmp
