improve pritunl setup with better mongodb setup

--- a/compiled/pritunl/manifests/pritunl-bundle.yml
+++ b/compiled/pritunl/manifests/pritunl-bundle.yml
@@ -84,7 +84,7 @@ spec:
       targetPort: http
     - name: vpn
       port: 1194
-      protocol: UDP
+      protocol: TCP
       targetPort: vpn
     - name: webui
       port: 443
