fix socksshop example

--- a/compiled/sock-shop/manifests/catalogue-db-bundle.yml
+++ b/compiled/sock-shop/manifests/catalogue-db-bundle.yml
@@ -39,7 +39,7 @@ spec:
               name: mysql
               protocol: TCP
           securityContext:
-            readOnlyRootFilesystem: true
+            readOnlyRootFilesystem: false
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
 ---
