--- a/compiled/sock-shop/manifests/frontend-bundle.yml
+++ b/compiled/sock-shop/manifests/frontend-bundle.yml
@@ -75,11 +75,11 @@ metadata:
 spec:
   ports:
     - name: http
-      port: 8079
+      port: 80
       protocol: TCP
       targetPort: http
   selector:
     app: frontend
     app.kubernetes.io/part-of: sock-shop
   sessionAffinity: None
-  type: ClusterIP
+  type: LoadBalancer
