--- a/inventory/classes/components/weaveworks/catalogue-db.yml
+++ b/inventory/classes/components/weaveworks/catalogue-db.yml
@@ -3,6 +3,8 @@ parameters:
     catalogue-db:
       application: sock-shop
       image: weaveworksdemos/catalogue-db:0.3.0
+      security_context:
+        readOnlyRootFilesystem: false
       service:
         type: ClusterIP
       ports:
