--- a/inventory/classes/components/weaveworks/orders.yml
+++ b/inventory/classes/components/weaveworks/orders.yml
@@ -14,6 +14,7 @@ parameters:
         probes: ['readiness', 'liveness']
         path: /health
         timeout_seconds: 3
+        initialDelaySeconds: 120
       security_context:
         runAsNonRoot: true
         runAsUser: 10001
