--- a/inventory/classes/components/weaveworks/shipping.yml
+++ b/inventory/classes/components/weaveworks/shipping.yml
@@ -21,6 +21,7 @@ parameters:
         probes: ['readiness', 'liveness']
         path: /health
         timeout_seconds: 3
+        initialDelaySeconds: 120
       env:
         ZIPKIN: zipkin.jaeger.svc.cluster.local
         JAVA_OPTS: "-Xms64m -Xmx128m -XX:PermSize=32m -XX:MaxPermSize=64m -XX:+UseG1GC -Djava.security.egd=file:/dev/urandom"
