--- a/compiled/sock-shop/manifests/orders-db-bundle.yml
+++ b/compiled/sock-shop/manifests/orders-db-bundle.yml
@@ -36,12 +36,12 @@ spec:
           securityContext:
             capabilities:
               add:
-                - NET_BIND_SERVICE
+                - CHOWN
+                - SETGID
+                - SETUID
               drop:
                 - all
             readOnlyRootFilesystem: true
-            runAsNonRoot: true
-            runAsUser: 10001
           volumeMounts:
             - mountPath: /tmp
               name: tmp-volume
