--- a/compiled/sock-shop/manifests/shipping-bundle.yml
+++ b/compiled/sock-shop/manifests/shipping-bundle.yml
@@ -37,6 +37,7 @@ spec:
               path: /health
               port: http
               scheme: HTTP
+            initialDelaySeconds: 120
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 3
@@ -51,6 +52,7 @@ spec:
               path: /health
               port: http
               scheme: HTTP
+            initialDelaySeconds: 120
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 3
