--- a/compiled/dev-sockshop/manifests/queue-master-bundle.yml
+++ b/compiled/dev-sockshop/manifests/queue-master-bundle.yml
@@ -40,6 +40,7 @@ spec:
               path: /health
               port: http
               scheme: HTTP
+            initialDelaySeconds: 0
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 3
@@ -54,6 +55,7 @@ spec:
               path: /health
               port: http
               scheme: HTTP
+            initialDelaySeconds: 0
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 3
