--- a/compiled/postgres-proxy/manifests/postgres-proxy-bundle.yml
+++ b/compiled/postgres-proxy/manifests/postgres-proxy-bundle.yml
@@ -41,6 +41,7 @@ spec:
           imagePullPolicy: IfNotPresent
           livenessProbe:
             failureThreshold: 3
+            initialDelaySeconds: 0
             periodSeconds: 10
             successThreshold: 1
             tcpSocket:
