--- a/compiled/pritunl/manifests/pritunl-bundle.yml
+++ b/compiled/pritunl/manifests/pritunl-bundle.yml
@@ -31,6 +31,7 @@ spec:
               path: /
               port: webui
               scheme: HTTPS
+            initialDelaySeconds: 0
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 3
@@ -51,6 +52,7 @@ spec:
               path: /
               port: webui
               scheme: HTTPS
+            initialDelaySeconds: 0
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 3
