--- a/compiled/pritunl/manifests/pritunl-mongo-bundle.yml
+++ b/compiled/pritunl/manifests/pritunl-mongo-bundle.yml
@@ -48,6 +48,7 @@ spec:
                 - --eval
                 - db.adminCommand('ping')
             failureThreshold: 3
+            initialDelaySeconds: 0
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 5
@@ -63,6 +64,7 @@ spec:
                 - --eval
                 - db.adminCommand('ping')
             failureThreshold: 3
+            initialDelaySeconds: 0
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 5
