--- a/compiled/prod-sockshop/manifests/catalogue-bundle.yml
+++ b/compiled/prod-sockshop/manifests/catalogue-bundle.yml
@@ -38,6 +38,7 @@ spec:
               path: /health
               port: http
               scheme: HTTP
+            initialDelaySeconds: 0
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 3
@@ -52,6 +53,7 @@ spec:
               path: /health
               port: http
               scheme: HTTP
+            initialDelaySeconds: 0
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 3
