--- a/compiled/prod-sockshop/manifests/frontend-bundle.yml
+++ b/compiled/prod-sockshop/manifests/frontend-bundle.yml
@@ -37,6 +37,7 @@ spec:
               path: /
               port: http
               scheme: HTTP
+            initialDelaySeconds: 0
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 3
@@ -51,6 +52,7 @@ spec:
               path: /
               port: http
               scheme: HTTP
+            initialDelaySeconds: 0
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 3
