--- a/compiled/sock-shop/manifests/payment-bundle.yml
+++ b/compiled/sock-shop/manifests/payment-bundle.yml
@@ -34,6 +34,7 @@ spec:
               path: /health
               port: http
               scheme: HTTP
+            initialDelaySeconds: 0
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 3
@@ -48,6 +49,7 @@ spec:
               path: /health
               port: http
               scheme: HTTP
+            initialDelaySeconds: 0
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 3
