--- a/compiled/echo-server/manifests/echo-server-bundle.yml
+++ b/compiled/echo-server/manifests/echo-server-bundle.yml
@@ -5,6 +5,7 @@ metadata:
     manifests.kapicorp.com/generated: 'true'
   labels:
     app: echo-server
+    name: echo-server
   name: echo-server
   namespace: echo-server
 spec:
@@ -12,6 +13,7 @@ spec:
   selector:
     matchLabels:
       app: echo-server
+      name: echo-server
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -21,6 +23,7 @@ spec:
     metadata:
       labels:
         app: echo-server
+        name: echo-server
     spec:
       containers:
         - image: jmalloc/echo-server
@@ -64,6 +67,7 @@ kind: Service
 metadata:
   labels:
     app: echo-server
+    name: echo-server
   name: echo-server
   namespace: echo-server
 spec:
@@ -74,5 +78,6 @@ spec:
       targetPort: http
   selector:
     app: echo-server
+    name: echo-server
   sessionAffinity: None
   type: LoadBalancer
