--- a/compiled/prod-sockshop/manifests/rabbit-mq-bundle.yml
+++ b/compiled/prod-sockshop/manifests/rabbit-mq-bundle.yml
@@ -6,6 +6,7 @@ metadata:
   labels:
     app: rabbit-mq
     app.kubernetes.io/part-of: sock-shop
+    name: rabbit-mq
   name: rabbit-mq
   namespace: prod-sockshop
 spec:
@@ -14,6 +15,7 @@ spec:
     matchLabels:
       app: rabbit-mq
       app.kubernetes.io/part-of: sock-shop
+      name: rabbit-mq
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -24,6 +26,7 @@ spec:
       labels:
         app: rabbit-mq
         app.kubernetes.io/part-of: sock-shop
+        name: rabbit-mq
     spec:
       containers:
         - image: rabbitmq:3.6.8-management
@@ -55,6 +58,7 @@ metadata:
   labels:
     app: rabbit-mq
     app.kubernetes.io/part-of: sock-shop
+    name: rabbit-mq
   name: rabbit-mq
   namespace: prod-sockshop
 spec:
@@ -70,5 +74,6 @@ spec:
   selector:
     app: rabbit-mq
     app.kubernetes.io/part-of: sock-shop
+    name: rabbit-mq
   sessionAffinity: None
   type: ClusterIP
