--- a/compiled/sock-shop/manifests/frontend-bundle.yml
+++ b/compiled/sock-shop/manifests/frontend-bundle.yml
@@ -6,6 +6,7 @@ metadata:
   labels:
     app: frontend
     app.kubernetes.io/part-of: sock-shop
+    name: frontend
   name: frontend
   namespace: sock-shop
 spec:
@@ -14,6 +15,7 @@ spec:
     matchLabels:
       app: frontend
       app.kubernetes.io/part-of: sock-shop
+      name: frontend
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -24,6 +26,7 @@ spec:
       labels:
         app: frontend
         app.kubernetes.io/part-of: sock-shop
+        name: frontend
     spec:
       containers:
         - env:
@@ -72,6 +75,7 @@ metadata:
   labels:
     app: frontend
     app.kubernetes.io/part-of: sock-shop
+    name: frontend
   name: frontend
   namespace: sock-shop
 spec:
@@ -83,5 +87,6 @@ spec:
   selector:
     app: frontend
     app.kubernetes.io/part-of: sock-shop
+    name: frontend
   sessionAffinity: None
   type: LoadBalancer
