fix extension change

--- a/inventory/classes/kapitan/generators/ingresses.yml
+++ b/inventory/classes/kapitan/generators/ingresses.yml
@@ -3,6 +3,6 @@ parameters:
     compile:
       - output_path: manifests
         input_type: jsonnet
-        output_type: yaml
+        output_type: yml
         input_paths:
           - components/generators/ingresses/main.jsonnet
