--- a/compiled/echo-server/manifests/echo-server-secret.yml
+++ b/compiled/echo-server/manifests/echo-server-secret.yml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  better_secret: ?{base64:targets/echo-server/password:ce03a7e0}
+  better_secret: ?{base64:eyJkYXRhIjogIlZWVTVTMlF6Um5kT1ZXaExZbFpLTkZscVRreE9WWEJFWTFaQ05HRllRWFJPVjBrMFV6SkdiRmRVYUV4VE1scEpaVzFXVVUxWVVuTlZVVDA5IiwgImVuY29kaW5nIjogImJhc2U2NCIsICJ0eXBlIjogImJhc2U2NCJ9:embedded}
   encoded_secret: bXlfc2VjcmV0
 kind: Secret
 metadata:
