--- a/compiled/tutorial/manifests/echo-server-secret.yml
+++ b/compiled/tutorial/manifests/echo-server-secret.yml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  better_secret: ?{base64:targets/tutorial/password:f8166f20}
+  better_secret: ?{base64:eyJkYXRhIjogIlpXMVdRazlYWkdsVE1tTjNWV3BDYlZkSWJGbGlWamxtVVZaQk5VOUZNVlppTVdkNFZFUmtTMkZ1VWpWT1ZHaEVWVlZ3UTJWR1dqVmFkejA5IiwgImVuY29kaW5nIjogImJhc2U2NCIsICJ0eXBlIjogImJhc2U2NCJ9:embedded}
   encoded_secret: bXlfc2VjcmV0
 kind: Secret
 metadata:
