--- a/inventory/classes/kapitan/common.yml
+++ b/inventory/classes/kapitan/common.yml
@@ -19,11 +19,11 @@ parameters:
         input_paths: ${scripts}
       - output_path: manifests
         input_type: jsonnet
-        output_type: yaml
+        output_type: yml
         input_paths: ${manifests}
       - output_path: pre-deploy
         input_type: jsonnet
-        output_type: yaml
+        output_type: yml
         input_paths:
           - components/pre-deploy/main.jsonnet
     vars:
